--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ body::-webkit-scrollbar {
       <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;">  <span class="big_header" style="font-size:3em;">3</span>Design & Development</h4>
       <p class="card-text">The work begins! 
 Let's get started on the project! I will ensure you are consistently updated throughout the entire process. If at any stage,
-          you have any concerns you can reach out reach out, and I'll be more than happy to give you the necessary answers.
+          you have any concerns you can reach out, and I'll be more than happy to give you the necessary answers.
    </p>
 </div>
 </div>
@@ -429,7 +429,7 @@ Let's get started on the project! I will ensure you are consistently updated thr
     <img class="card-img-top" style="width:10%;" src="images/testi.png" alt="">
     <div class="card-body">
       <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;">Sylva Z.</h4>
-      <p class="card-text">"Christelle handled our brand's Shopify store perfectly, we are so happy with the results and service. Very supportive and nice. It was a pleasure working with her!" </p>
+      <p class="card-text">"Christelle absolutely nailed it when it came to taking care of our brand's Shopify store. We couldn't be happier with the results and the top-notch service she provided. Not only was she super supportive, but also incredibly nice to work with. It was an absolute pleasure partnering with her!" </p>
 </div>
 
 </div>
@@ -441,7 +441,7 @@ Let's get started on the project! I will ensure you are consistently updated thr
 <div class="cta">
      <div> 
    
-    <h2 class="" style="text-align:center;color:#171717 !important;margin:auto;">Your website represents your business. Let me help you improve it. 💻 🚀    </h2>
+    <h2 class="" style="text-align:center;color:#171717 !important;margin:auto;">Your website represents your business. Let's work together to create one that truly reflects your brand and helps you succeed. 💻 🚀    </h2>
   </div> 
 
  <div style="text-align:center;"> 
@@ -456,7 +456,7 @@ Let's get started on the project! I will ensure you are consistently updated thr
  <h2 style="text-transform:uppercase;">Contact</h2>
 <div><p style="font-size: 1.67em;
     margin-top: 2em;">If you are ready to take your digital presence to the next level or have any inquiries, feel free to get in touch. I am available for freelance projects and collaborations worldwide.
-     Let's work together to create a website that truly reflects your brand and helps you succeed.</p></div>
+    </p></div>
  <table>
   <tr>  
       <td>  
