--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ Let's get started on the project! I will ensure you are consistently updated thr
 <div class="cta">
      <div> 
    
-    <h2 class="" style="text-align:center;color:#171717 !important;margin:auto;">Your website represents your business. Let's work together to create one that truly reflects your brand and helps you succeed. 💻 🚀    </h2>
+    <h2 class="" style="text-align:center;color:#171717 !important;margin:auto;">Let's work together to create a website that truly reflects your brand and helps you succeed. 💻 🚀    </h2>
   </div> 
 
  <div style="text-align:center;"> 
@@ -452,7 +452,7 @@ Let's get started on the project! I will ensure you are consistently updated thr
 <div id="contact">
  <h2 style="text-transform:uppercase;">Contact</h2>
 <div><p style="font-size: 1.67em;
-    margin-top: 2em;">If you are ready to take your digital presence to the next level or have any inquiries, feel free to get in touch. I am available for freelance projects and collaborations worldwide.
+    margin-top: 2em;">If you'd like us to work together or have any inquiries, feel free to get in touch. I am available for freelance projects and collaborations worldwide.
     </p></div>
  <table>
   <tr>  
