--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ body::-webkit-scrollbar {
                         
                         <a href="#work">work</a>
                         <a href="#bio">about</a>
-                        <a href="services.html">services</a>
+                        <a href="#services">services</a>
                         <a href="#contact">contact</a>
                     </td>
                 </tr>
