--- a/index.html
+++ b/index.html
@@ -369,9 +369,7 @@ body::-webkit-scrollbar {
    </marquee><hr><br><br> 
 </div>
 
-<div class="services">
-    
-    
+<div class="services" id="services">
  <h2 style="text-transform:uppercase;color:#dfd2c3;">services</h2>
  <div class="card-deck">
   <div class="card">
