--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       "https://www.linkedin.com/in/christellehaddad/",
       "https://christellehddd.com"
       ],
-      "jobTitle": "Web Developer & Designer",
+      "jobTitle": "Freelance Web Developer in Lebanon",
       "worksFor": {
         "@type": "Organization",
         "name": "Freelance"
@@ -52,7 +52,7 @@
     document.addEventListener('contextmenu', event => event.preventDefault());
 </script>
 
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon.png">
 <link rel="manifest" href="/site.webmanifest">
 
 <meta charset="UTF-8">
@@ -169,13 +169,13 @@ body::-webkit-scrollbar {
 
 <!-- HTML Meta Tags -->
 <title>Freelance Web Developer | Web Design and SEO Services</title>
-<meta name="description" content="Looking for a skilled web developer in Lebanon? Christelle Haddad is your go-to expert for WordPress and Webflow development. With extensive experience and a passion for creating stunning websites, Christelle can bring your digital vision to life. Boost your online presence and enhance user experience with cutting-edge designs and smooth functionality. Contact me today for all your web development needs.🚀 ">
+<meta name="description" content="Looking for a skilled freelance web developer in Lebanon? Christelle Haddad is your go-to expert for WordPress, Shopify and Webflow development. With extensive experience and a passion for creating stunning websites, Christelle can bring your digital vision to life. Boost your online presence and enhance user experience with cutting-edge designs and smooth functionality. Contact me today for all your web development needs.🚀 ">
 <link rel="author" href="https://www.linkedin.com/in/christellehaddad/" /><meta name="author" content="Freelance web developer Christelle Haddad" />
-<meta name="keywords" content="freelance web designer, freelance web developer in lebanon, webflow developer, seo, developer, joomla developer, shopify developer, wordpress developer, freelance web developer lebanon, web designer lebanon, christelle haddad, web developer in lebanon, wordpress developer in lebanon, christelle haddad developer, web designer in lebanon">
+<meta name="keywords" content="freelance web developer, freelance web developer in lebanon, webflow developer, seo, developer, joomla developer, shopify developer, wordpress developer, freelance web developer lebanon, web designer lebanon, christelle haddad, web developer in lebanon, wordpress developer in lebanon, christelle haddad developer, web designer in lebanon">
 <link rel="icon" href="images/favicon.icon">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-<link rel="icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon.png">
 <link rel="canonical" href="https://christellehddd.com/" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
@@ -184,15 +184,16 @@ body::-webkit-scrollbar {
 <meta property="og:url" content="https://christellehddd.com/">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Freelance Web Developer | Web Design and SEO Services">
-<meta property="og:description" content="Christelle is a freelance web developer focused on building beautiful user-centered interfaces & experiences. Let's elevate your business! 🚀 ">
-<meta property="og:image" content="/meta.png">
+<meta property="og:description" content="Looking for a skilled freelance web developer in Lebanon? Christelle Haddad is your go-to expert for WordPress, Shopify and Webflow development. With extensive experience and a passion for creating stunning websites, Christelle can bring your digital vision to life. Boost your online presence and enhance user experience with cutting-edge designs and smooth functionality. Contact me today for all your web development needs.🚀 ">
+">
+    <meta property="og:image" content="/meta.png">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="christellehddd.com">
 <meta property="twitter:url" content="htts://christellehddd.com/">
 <meta name="twitter:title" content="Freelance Web Developer  • Web Design and SEO Services">
-<meta name="twitter:description" content="Christelle is a freelance web developer focused on building beautiful user-centered interfaces & experiences. Let's elevate your business! 🚀 ">
+<meta name="twitter:description" content="Looking for a skilled freelance web developer in Lebanon? Christelle Haddad is your go-to expert for WordPress, Shopify and Webflow development. With extensive experience and a passion for creating stunning websites, Christelle can bring your digital vision to life. Boost your online presence and enhance user experience with cutting-edge designs and smooth functionality. Contact me today for all your web development needs.🚀 "> 🚀 ">
 <meta name="twitter:image" content="/images/meta.png">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -299,7 +300,7 @@ body::-webkit-scrollbar {
             </figure>
      <figure> 
          <a  href="https://www.behance.net/gallery/131154021/Movie-Tickets-Booking-App-UX-Case-Study">
-             <img onclick="magnify($(this).attr('src'))" src="images/cine.png" alt="Movie Tickets Booking App-UX Project"></a>
+             <img src="images/cine.png" alt="Movie Tickets Booking App-UX Project"></a>
          <div style="text-align:center;">
              <a href="https://www.behance.net/gallery/131154021/Movie-Tickets-Booking-App-UX-Case-Study"> 
                  <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW PROJECT ➜</button></a>
