--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ body::-webkit-scrollbar {
     }
     
 }
-
+.d-none{display:none;}
 
 </style>
 
@@ -210,9 +210,9 @@ body::-webkit-scrollbar {
         <div id="loading">
             <div id="spinner"></div>
         </div>
-        <div id="magnify">
+     <!--   <div id="magnify">
             <h1 onclick="closemagnify()"><i class="fas fa-times"></i></h1>
-            <div id="img_here"></div>
+            <div id="img_here"></div> -->
         </div>
         <header id="header" style="background: #171717 !important;" class="animated slideInDown" style="animation-delay:1.8s;">
             <table>
@@ -232,7 +232,8 @@ body::-webkit-scrollbar {
             <tr>
                 <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
        <h2 style="color:#dfd2c3;">Hi! I am Christelle, a Web Developer & Designer.</h2></br>
-                    <h1 class="big_header" ><span>I build websites that help businesses <i>grow</i>.</span></h1>
+            <h1 class="d-none">freelance web developer lebanon</h1>
+                    <h3 class="big_header" ><span>I build websites that help businesses <i>grow</i>.</span></h3>
                    <a href="https://calendly.com/christellehddd"> <button class="pulse-grow-on-hover" >Book a call ➜</button></a><br>
                     
                 </td>
