--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ body::-webkit-scrollbar {
 <meta property="twitter:domain" content="christellehddd.com">
 <meta property="twitter:url" content="htts://christellehddd.com/">
 <meta name="twitter:title" content="Freelance Web Developer  • Web Design and SEO Services">
-<meta name="twitter:description" content="Looking for a skilled freelance web developer in Lebanon? Christelle Haddad is your go-to expert for WordPress, Shopify and Webflow development. With extensive experience and a passion for creating stunning websites, Christelle can bring your digital vision to life. Boost your online presence and enhance user experience with cutting-edge designs and smooth functionality. Contact me today for all your web development needs.🚀 "> 🚀 ">
+<meta name="twitter:description" content="Looking for a skilled freelance web developer in Lebanon? Christelle Haddad is your go-to expert for WordPress, Shopify and Webflow development. With extensive experience and a passion for creating stunning websites, Christelle can bring your digital vision to life. Boost your online presence and enhance user experience with cutting-edge designs and smooth functionality. Contact me today for all your web development needs.🚀 "> 
 <meta name="twitter:image" content="/images/meta.png">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
