--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ body::-webkit-scrollbar {
 </style>
 
 <!-- HTML Meta Tags -->
-<title>Freelance Web Developer | Web Design and SEO Services</title>
+<title>Freelance Web Developer in Lebanon| Web Design and SEO Services</title>
 <meta name="description" content="Looking for a skilled freelance web developer in Lebanon? Christelle Haddad is your go-to expert for WordPress, Shopify and Webflow development. With extensive experience and a passion for creating stunning websites, Christelle can bring your digital vision to life. Boost your online presence and enhance user experience with cutting-edge designs and smooth functionality. Contact me today for all your web development needs.🚀 ">
 <link rel="author" href="https://www.linkedin.com/in/christellehaddad/" /><meta name="author" content="Freelance web developer Christelle Haddad" />
 <meta name="keywords" content="freelance web developer, freelance web developer in lebanon, webflow developer, seo, developer, joomla developer, shopify developer, wordpress developer, freelance web developer lebanon, web designer lebanon, christelle haddad, web developer in lebanon, wordpress developer in lebanon, christelle haddad developer, web designer in lebanon">
@@ -183,7 +183,7 @@ body::-webkit-scrollbar {
 <!-- Facebook Meta Tags -->
 <meta property="og:url" content="https://christellehddd.com/">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Freelance Web Developer | Web Design and SEO Services">
+<meta property="og:title" content="Freelance Web Developer in Lebanon | Web Design and SEO Services">
 <meta property="og:description" content="Looking for a skilled freelance web developer in Lebanon? Christelle Haddad is your go-to expert for WordPress, Shopify and Webflow development. With extensive experience and a passion for creating stunning websites, Christelle can bring your digital vision to life. Boost your online presence and enhance user experience with cutting-edge designs and smooth functionality. Contact me today for all your web development needs.🚀 ">
     <meta property="og:image" content="/meta.png">
 
@@ -232,7 +232,7 @@ body::-webkit-scrollbar {
             <tr>
                 <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
        <h3 style="color:#dfd2c3;">Hi! I am Christelle, a Web Developer & Designer.</h3></br>
-            <h1 class="d-none">freelance web developer lebanon</h1>
+            <h1 class="d-none">freelance web developer in lebanon</h1>
                     <h2 class="big_header" ><span>I build websites that help businesses <i>grow</i>.</span></h2>
                    <a href="https://calendly.com/christellehddd"> <button class="pulse-grow-on-hover" >Book a call ➜</button></a><br>
                     
