--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ body::-webkit-scrollbar {
 </style>
 
 <!-- HTML Meta Tags -->
-<title>Freelance Web Developer in Lebanon • Christelle Haddad • Web Design and SEO Services</title>
+<title>Freelance Web Developer in Lebanon | Web Design | SEO</title>
 <meta name="description" content="Looking for a skilled freelance web developer in Lebanon? Christelle Haddad is your go-to professional for WordPress, Shopify and Webflow development. With extensive experience and a passion for creating stunning websites, Christelle can bring your digital vision to life. Boost your online presence and enhance user experience with cutting-edge designs and smooth functionality. Contact me today for all your web development needs.🚀 ">
 <link rel="author" href="https://www.linkedin.com/in/christellehaddad/" /><meta name="author" content="Freelance web developer Christelle Haddad" />
 <meta name="keywords" content="freelance web developer, webcode web designer lebanon, freelance web developer in lebanon, webflow developer, seo, developer, joomla developer, shopify developer, wordpress developer, freelance web developer lebanon, web designer lebanon, christelle haddad, web developer in lebanon, wordpress developer in lebanon, christelle haddad developer, web designer in lebanon">
@@ -183,7 +183,7 @@ body::-webkit-scrollbar {
 <!-- Facebook Meta Tags -->
 <meta property="og:url" content="https://christellehddd.com/">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Freelance Web Developer in Lebanon • Christelle Haddad • Web Design and SEO Services">
+<meta property="og:title" content="Freelance Web Developer in Lebanon | Web Design | SEO">
 <meta property="og:description" content="Looking for a skilled freelance web developer in Lebanon? Christelle Haddad is your go-to professional for WordPress, Shopify and Webflow development. With extensive experience and a passion for creating stunning websites, Christelle can bring your digital vision to life. Boost your online presence and enhance user experience with cutting-edge designs and smooth functionality. Contact me today for all your web development needs.🚀 ">
     <meta property="og:image" content="/meta.png">
 
@@ -191,7 +191,7 @@ body::-webkit-scrollbar {
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="christellehddd.com">
 <meta property="twitter:url" content="htts://christellehddd.com/">
-<meta name="twitter:title" content="Freelance Web Developer • Christelle Haddad • Web Design and SEO Services">
+<meta name="twitter:title" content="Freelance Web Developer in Lebanon | Web Design | SEO">
 <meta name="twitter:description" content="Looking for a skilled freelance web developer in Lebanon? Christelle Haddad is your go-to professional for WordPress, Shopify and Webflow development. With extensive experience and a passion for creating stunning websites, Christelle can bring your digital vision to life. Boost your online presence and enhance user experience with cutting-edge designs and smooth functionality. Contact me today for all your web development needs.🚀 "> 
 <meta name="twitter:image" content="/images/meta.png">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -231,7 +231,7 @@ body::-webkit-scrollbar {
         <table id="top_part" style="background-color: #171717;">
             <tr>
                 <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
-       <h4 style="color:#dfd2c3;">Hi! I am Christelle, a Web Developer & Designer.</h4></br>
+       <h3 style="color:#dfd2c3;">Hi! I am Christelle, a Web Developer & Designer.</h3></br>
             <h1 class="d-none">freelance web developer in lebanon Web Design and SEO Services</h1>
                     <h2 class="big_header" ><span>I build websites that help businesses <i>grow</i>.</span></h2>
                    <a href="https://calendly.com/christellehddd"> <button class="pulse-grow-on-hover" >Book a call ➜</button></a><br>
