--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@ body::-webkit-scrollbar {
 <!-- HTML Meta Tags -->
 <title>Freelance Web Developer in Lebanon | Web Design | SEO</title>
 <meta name="description" content="Looking for a skilled freelance web developer in Lebanon? Christelle Haddad is your go-to professional for WordPress, Shopify and Webflow development. With extensive experience and a passion for creating stunning websites, Christelle can bring your digital vision to life. Boost your online presence and enhance user experience with cutting-edge designs and smooth functionality. Contact me today for all your web development needs.🚀 ">
-<link rel="author" href="https://www.linkedin.com/in/christellehaddad/" /><meta name="author" content="Freelance web developer Christelle Haddad" />
+<link rel="author" href="https://www.linkedin.com/in/christellehaddad/" />
+    <meta name="author" content="Freelance web developer Christelle Haddad" />
 <meta name="keywords" content="freelance web developer, webcode web designer lebanon, freelance web developer in lebanon, webflow developer, seo, developer, joomla developer, shopify developer, wordpress developer, freelance web developer lebanon, web designer lebanon, christelle haddad, web developer in lebanon, wordpress developer in lebanon, christelle haddad developer, web designer in lebanon">
 <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon.png">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -185,7 +186,7 @@ body::-webkit-scrollbar {
 <meta property="og:type" content="website">
 <meta property="og:title" content="Freelance Web Developer in Lebanon | Web Design | SEO">
 <meta property="og:description" content="Looking for a skilled freelance web developer in Lebanon? Christelle Haddad is your go-to professional for WordPress, Shopify and Webflow development. With extensive experience and a passion for creating stunning websites, Christelle can bring your digital vision to life. Boost your online presence and enhance user experience with cutting-edge designs and smooth functionality. Contact me today for all your web development needs.🚀 ">
-    <meta property="og:image" content="/meta.png">
+    <meta property="og:image" content="/meta-freelance-web-developer-lebanon.png">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
@@ -193,7 +194,7 @@ body::-webkit-scrollbar {
 <meta property="twitter:url" content="htts://christellehddd.com/">
 <meta name="twitter:title" content="Freelance Web Developer in Lebanon | Web Design | SEO">
 <meta name="twitter:description" content="Looking for a skilled freelance web developer in Lebanon? Christelle Haddad is your go-to professional for WordPress, Shopify and Webflow development. With extensive experience and a passion for creating stunning websites, Christelle can bring your digital vision to life. Boost your online presence and enhance user experience with cutting-edge designs and smooth functionality. Contact me today for all your web development needs.🚀 "> 
-<meta name="twitter:image" content="/images/meta.png">
+<meta name="twitter:image" content="/images/meta-freelance-web-developer-lebanon.png">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
