--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ body::-webkit-scrollbar {
                         <a href="#work">work</a>
                         <a href="#bio">about</a>
                         <a href="#services">services</a>
-                        <a href="#contact">contact</a>
+                        <a href="#contact"> <button class="pulse-grow-on-hover">contact</button></a>
                     </td>
                 </tr>
             </table>
@@ -235,7 +235,7 @@ body::-webkit-scrollbar {
        <h3 style="color:#dfd2c3;">Hi! I am Christelle, a Web Developer & Designer.</h3></br>
             <h1 class="d-none">freelance web developer in lebanon Web Design and SEO Services</h1>
                     <h1 class="big_header" ><span>I build websites that help businesses <i>grow</i>.</span></h1>
-                   <a href="https://calendly.com/christellehddd"> <button class="pulse-grow-on-hover" >Book a call ➜</button></a><br>
+                   <a href="#contact"> <button class="pulse-grow-on-hover" >Get in touch ➜</button></a><br>
                     
                 </td>
             </td>
