--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ body::-webkit-scrollbar {
                         <a href="#work">work</a>
                         <a href="#bio">about</a>
                         <a href="#services">services</a>
-                        <a href="#contact"> <button class="pulse-grow-on-hover">contact</button></a>
+                        <a href="#contact">contact</a>
                     </td>
                 </tr>
             </table>
