--- a/index.html
+++ b/index.html
@@ -495,10 +495,10 @@ Let's get started on the project! I will ensure you are consistently updated thr
     <h3 class="" style="text-align:center;color:#dfd2c3 !important;margin:auto;">Let's work together to create a website that truly reflects your brand and helps you succeed. 💻 🚀</h3>
   </div> 
 
- <div style="text-align:center;"> 
+<!-- <div style="text-align:center;"> 
   <a href="https://calendly.com/christellehddd"> <button class="pulse-grow-on-hover" style="color: #dfd2c3; border: 1px solid #dfd2c3;" > BOOK A CALL</button></a>
 </div>
-
+-->
 </div>
 
 
