--- a/index.html
+++ b/index.html
@@ -544,8 +544,13 @@ Let's get started on the project! I will ensure you are consistently updated thr
     ©2023 <a href="https://christellehddd.com/" style="color:#171717 !important;" >christellehddd</a>
 </div>
 
-    <script src="index.js" type="text/javascript"></script>
-   
+   <script src="index.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        window.omnisend = window.omnisend || [];
+        omnisend.push(["accountID", "635d88f07549196301007419"]);
+        omnisend.push(["track", "$pageViewed"]);
+        !function(){var e=document.createElement("script");e.type="text/javascript",e.async=!0,e.src="https://omnisrc-dev.work/inshop/launcher-v2.js";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)}();
+</script>
   
 </body>
 </html>
