--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ body::-webkit-scrollbar {
 <meta name="description" content="Looking for a skilled freelance web developer in Lebanon? Christelle Haddad is your go-to professional for WordPress, Shopify and Webflow development. With extensive experience and a passion for creating stunning websites, Christelle can bring your digital vision to life. Boost your online presence and enhance user experience with cutting-edge designs and smooth functionality. Contact me today for all your web development needs.🚀 ">
 <link rel="author" href="https://www.linkedin.com/in/christellehaddad/" />
     <meta name="author" content="Freelance web developer Christelle Haddad" />
-<meta name="keywords" content="freelance web developer, webcode web designer lebanon, freelance web developer in lebanon, webflow developer, seo, developer, joomla developer, shopify developer, wordpress developer, freelance web developer lebanon, web designer lebanon, christelle haddad, web developer in lebanon, wordpress developer in lebanon, christelle haddad developer, web designer in lebanon">
+<meta name="keywords" content="freelance web developer, web designer beirut, best web design companies in lebanon, freelance web developer in lebanon, webflow developer, seo services in lebanon, freelance web developer, joomla developer, shopify developer, wordpress developer, freelance web developer lebanon, web designer lebanon, christelle haddad, web developer in lebanon, wordpress developer in lebanon, christelle haddad developer, web designer in lebanon">
 <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon.png">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -245,7 +245,7 @@ body::-webkit-scrollbar {
         <h2 style="text-transform:uppercase;">latest work</h2>
         <div id="photos">
      <figure> <a href="https://wpadvisors.ch/">
-         <img onclick="magnify($(this).attr('src'))" src="images/wpa.png" alt="Wordpress WPA Website" ></a> 
+         <img onclick="magnify($(this).attr('src'))" src="images/wpa.png" alt="Wordpress WPA Website by Christelle Haddad freelance web developer in lebanon" ></a> 
          <div style="text-align:center;"> 
              <a href="https://wpadvisors.ch/"> 
                  <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button>
@@ -253,7 +253,7 @@ body::-webkit-scrollbar {
          </div>
 </figure>
             <figure> <a href="https://protecevents.com/">
-                <img onclick="magnify($(this).attr('src'))" src="images/protec.png" alt="Wordpress Protec Website" ></a>
+                <img onclick="magnify($(this).attr('src'))" src="images/protec.png" alt="Wordpress Protec Website by Christelle Haddad freelance web developer in lebanon" ></a>
                 <div style="text-align:center;"> 
                     <a href="https://protecevents.com/"> 
                         <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button>
@@ -262,7 +262,7 @@ body::-webkit-scrollbar {
             </figure>
     <figure> 
         <a href="https://ptstrading.net/">
-            <img onclick="magnify($(this).attr('src'))" src="images/ptsf.png" alt="Wordpress PTSTrading Website" ></a>
+            <img onclick="magnify($(this).attr('src'))" src="images/ptsf.png" alt="Wordpress PTSTrading Website by Christelle Haddad freelance web developer in lebanon" ></a>
         <div  style="text-align:center;">
             <a href="https://ptstrading.net/"> 
             <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button>
@@ -278,23 +278,23 @@ body::-webkit-scrollbar {
             </figure>
             <!-- <figure>  <img onclick="magnify($(this).attr('src'))" src="images/musicc.png" alt="Music player UX project"></a></figure>-->
             <figure>  
-                <a href="https://www.agostostore.com/"> <img onclick="magnify($(this).attr('src'))" src="images/agostoo.png" alt="Shopify Agosto Store Website UAE"></a>
+                <a href="https://www.agostostore.com/"> <img onclick="magnify($(this).attr('src'))" src="images/agostoo.png" alt="Shopify Agosto Store Website UAE by Christelle Haddad freelance web developer in lebanon"></a>
                 <div  style="text-align:center;">
                     <a href="https://www.agostostore.com/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
                 </div>
             </figure>
      <figure> 
-         <a href="https://imadaboukhalil.com/the-authentic-you"><img onclick="magnify($(this).attr('src'))" src="images/imad.png" alt="The authentic you webinar landing page" ></a><div  style="text-align:center;"><a href="https://imadaboukhalil.com/the-authentic-you"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
+         <a href="https://imadaboukhalil.com/the-authentic-you"><img onclick="magnify($(this).attr('src'))" src="images/imad.png" alt="The authentic you webinar landing page by Christelle Haddad freelance web developer in lebanon" ></a><div  style="text-align:center;"><a href="https://imadaboukhalil.com/the-authentic-you"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
      <figure> 
          <a href="https://heapapparel.com/">
-             <img onclick="magnify($(this).attr('src'))" src="images/heap%20(1)f.png" alt="Shopify HEAP Apparel Website" ></a>
+             <img onclick="magnify($(this).attr('src'))" src="images/heap%20(1)f.png" alt="Shopify HEAP Apparel Website by Christelle Haddad freelance web developer in lebanon" ></a>
          <div  style="text-align:center;"><a href="https://heapapparel.com/"> 
              <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
          </div>
             </figure>
      <figure>  
          <a href="https://thesteakhouse.webflow.io/"> 
-             <img onclick="magnify($(this).attr('src'))"src="images/steakf.png" alt="The Steakhouse Webflow Project"></a>
+             <img onclick="magnify($(this).attr('src'))"src="images/steakf.png" alt="The Steakhouse Webflow Project by Christelle Haddad freelance web developer in lebanon"></a>
          <div  style="text-align:center;"><a href="#"> 
              <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
          </div>
@@ -308,13 +308,13 @@ body::-webkit-scrollbar {
          </div>
             </figure>
      <figure>  
-                <a href="https://www.levantlink.cy/"> <img onclick="magnify($(this).attr('src'))" src="images/levant%20(1)f.png" alt="Wordpress LevantLink Website Cyprus"></a>
+                <a href="https://www.levantlink.cy/"> <img onclick="magnify($(this).attr('src'))" src="images/levant%20(1)f.png" alt="Wordpress LevantLink Website Cyprus by Christelle Haddad freelance web developer in lebanon"></a>
                 <div  style="text-align:center;">
                     <a href="https://www.levantlink.cy/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
                 </div>
             </figure>
      <figure>  
-         <img onclick="magnify($(this).attr('src'))" src="images/ddf2.png" alt="DDF Project"> 
+         <img onclick="magnify($(this).attr('src'))" src="images/ddf2.png" alt="DDF Project by Christelle Haddad freelance web developer in lebanon"> 
          <div style="text-align:center;">
              <a href="http://dameauxdoigtsdefee.com/"> 
          <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
@@ -322,7 +322,7 @@ body::-webkit-scrollbar {
             </figure> 
      <figure> 
          <a href="https://pepesrestaurant.webflow.io/">
-             <img onclick="magnify($(this).attr('src'))" src="images/pepesf.png" alt="Pepe's Restaurant Webflow Project"></a>
+             <img onclick="magnify($(this).attr('src'))" src="images/pepesf.png" alt="Pepe's Restaurant Webflow Project by Christelle Haddad freelance web developer in lebanon"></a>
          <div  style="text-align:center;">
              <a href="https://pepesrestaurant.webflow.io/">
                  <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
