--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ body::-webkit-scrollbar {
 </style>
 
 <!-- HTML Meta Tags -->
-<title>Freelance Web Developer in Lebanon | Web Design | SEO</title>
+<title>Freelance Web Developer • Web Design and SEO Services</title>
 <meta name="description" content="Looking for a skilled freelance web developer in Lebanon? Christelle Haddad is your go-to professional for WordPress, Shopify and Webflow development. With extensive experience and a passion for creating stunning websites, Christelle can bring your digital vision to life. Boost your online presence and enhance user experience with cutting-edge designs and smooth functionality. Contact me today for all your web development needs.🚀 ">
 <link rel="author" href="https://www.linkedin.com/in/christellehaddad/" />
     <meta name="author" content="Freelance web developer Christelle Haddad" />
@@ -184,7 +184,7 @@ body::-webkit-scrollbar {
 <!-- Facebook Meta Tags -->
 <meta property="og:url" content="https://christellehddd.com/">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Freelance Web Developer in Lebanon | Web Design | SEO">
+<meta property="og:title" content="Freelance Web Developer • Web Design and SEO Services">
 <meta property="og:description" content="Looking for a skilled freelance web developer in Lebanon? Christelle Haddad is your go-to professional for WordPress, Shopify and Webflow development. With extensive experience and a passion for creating stunning websites, Christelle can bring your digital vision to life. Boost your online presence and enhance user experience with cutting-edge designs and smooth functionality. Contact me today for all your web development needs.🚀 ">
     <meta property="og:image" content="/meta-freelance-web-developer-lebanon.png">
 
@@ -192,7 +192,7 @@ body::-webkit-scrollbar {
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="christellehddd.com">
 <meta property="twitter:url" content="htts://christellehddd.com/">
-<meta name="twitter:title" content="Freelance Web Developer in Lebanon | Web Design | SEO">
+<meta name="twitter:title" content="Freelance Web Developer • Web Design and SEO Services">
 <meta name="twitter:description" content="Looking for a skilled freelance web developer in Lebanon? Christelle Haddad is your go-to professional for WordPress, Shopify and Webflow development. With extensive experience and a passion for creating stunning websites, Christelle can bring your digital vision to life. Boost your online presence and enhance user experience with cutting-edge designs and smooth functionality. Contact me today for all your web development needs.🚀 "> 
 <meta name="twitter:image" content="/images/meta-freelance-web-developer-lebanon.png">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
