--- a/index.html
+++ b/index.html
@@ -489,7 +489,10 @@ Let's get started on the project! I will ensure you are consistently updated thr
 
 
 
-<div class="cta">
+<div class="cta" style="
+    padding: 18em;
+    background-image: url(images/illustration-web-des.png);
+    background-size: cover;">
      <div> 
    
     <h3 class="" style="text-align:center;color:#dfd2c3 !important;margin:auto;">Let's work together to create a website that truly reflects your brand and helps you succeed. 💻 🚀</h3>
@@ -513,7 +516,6 @@ Let's get started on the project! I will ensure you are consistently updated thr
       <td>  
        <form action="https://getform.io/f/2ff73cfd-e3c4-4ec8-b0e8-042615c37b4b" method="POST" id="demo-form">
         <input type="text" placeholder="name" name="name" required>
-           <input type="text" placeholder="number" name="number">
         <input type="email" placeholder="email" name="email" required><br>
           <select name="service" required>
               <option value="service">service needed</option>
