--- a/index.html
+++ b/index.html
@@ -489,12 +489,8 @@ Let's get started on the project! I will ensure you are consistently updated thr
 
 
 
-<div class="cta" style="
-    padding: 18em;
-    background-image: url(images/illustration-web-des.png);
-    background-size: cover;">
-     <div> 
-   
+<div class="cta" >
+     <div>
     <h3 class="" style="text-align:center;color:#dfd2c3 !important;margin:auto;">Let's work together to create a website that truly reflects your brand and helps you succeed. 💻 🚀</h3>
   </div> 
 
@@ -537,7 +533,11 @@ Let's get started on the project! I will ensure you are consistently updated thr
 </table>
 
 
-<div class="social_footer" style=""> <span class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://www.linkedin.com/in/christellehaddad/">linkedin</a></span>
+<div class="social_footer" style="
+    padding: 8em;
+    background-image: url('images/illustration-web-des.png');
+    background-size: cover;">
+    <span class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://www.linkedin.com/in/christellehaddad/">linkedin</a></span>
  <span class="animated zoomIn" style="animation-delay:2.4s;"><a class="social" href="https://behance.net/christellehddd">behance</a></span>
 </div>
 </div>
