--- a/index.html
+++ b/index.html
@@ -533,10 +533,7 @@ Let's get started on the project! I will ensure you are consistently updated thr
 </table>
 
 
-<div class="social_footer" style="
-    padding: 8em;
-    background-image: url('images/illustration-web-des.png');
-    background-size: cover;">
+<div class="social_footer" >
     <span class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://www.linkedin.com/in/christellehaddad/">linkedin</a></span>
  <span class="animated zoomIn" style="animation-delay:2.4s;"><a class="social" href="https://behance.net/christellehddd">behance</a></span>
 </div>
