--- a/index.html
+++ b/index.html
@@ -337,10 +337,10 @@ body::-webkit-scrollbar {
 <div id="bio">
    <h2 style="text-transform:uppercase;color:#dfd2c3;">about</h2>
    <p>
-       My name is Christelle, I'm a freelance web developer from Lebanon. 
+       My name is Christelle, I'm a <a href="https://christellehddd.com/" title="freelance web developer" rel="dofollow">freelance web developer</a> from Lebanon. 
        <br>
        With a strong passion for creating user-centered websites and helping people establish a digital presence, I'm dedicated to delivering high-quality solutions tailored to their needs. 
-       Whether you are a company, a start-up, or an individual, I'm here to help you achieve your goals through effective web design and development.
+       Whether you are a company, a start-up, or an individual, I'm here to help you achieve your goals through effective <a href="https://christellehddd.com/" title="website design and development" rel="dofollow">web design and development</a>.
       
        With my skills and experience in website design and development, I create beautiful user-centered interfaces for brands and individuals who want to 
        make a strong web presence and achieve their goals. 
@@ -378,7 +378,7 @@ body::-webkit-scrollbar {
     <img class="card-img-top" style="width:30%;" src="images/web-design-service.png" alt="responsive web UX/UI design">
     <div class="card-body">
         <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;">responsive web UX/UI design</h4>
-        <p class="card-text">It's essential that your website can adjust effortlessly to various screen sizes and resolutions. My area of expertise lies in responsive web design, which guarantees that your website appears and operates smoothly on a diverse array of devices, such as smartphones, tablets, laptops, and desktops.</br>
+        <p class="card-text">It's essential that your website can adjust effortlessly to various screen sizes and resolutions. My area of expertise lies in <a href="https://christellehddd.com/" title="responsive web design and development" rel="dofollow">responsive web design</a>, which guarantees that your website appears and operates smoothly on a diverse array of devices, such as smartphones, tablets, laptops, and desktops.</br>
     </div>
 </div>
 <div class="card">
@@ -399,7 +399,7 @@ body::-webkit-scrollbar {
 <div class="card">
     <img class="card-img-top" style="width:30%;" src="images/seo-service.png" alt="web SEO Services">
     <div class="card-body">
-       <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;">web SEO Services</h4>
+       <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;"><a href="https://christellehddd.com/" title="web seo services" rel="dofollow">web SEO Services</a></h4>
        <p class="card-text">It's essential to ensure that your website is discoverable by search engines. I offer SEO optimization services to enhance your website's visibility and organic search rankings. By conducting technical SEO best practices, I ensure that your website adheres to SEO best practices. This increases the chances of attracting targeted organic traffic, improving your online presence, and generating valuable leads.</p>
    </p>
 </div>
@@ -473,7 +473,7 @@ Let's get started on the project! I will ensure you are consistently updated thr
     <img class="card-img-top" style="width:10%;" src="images/testi.png" alt="testimonial quote">
     <div class="card-body">
         <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;">Maya A.</h4>
-        <p class="card-text">"I recently worked with Christelle on a website development from scratch and was impressed with her exceptional service and expertise. Christelle listened to my vision, offered creative ideas and made sure the final product exceeded my expectations. I highly recommend working with her!"</p>
+        <p class="card-text">"I recently worked with Christelle on a <a href="https://christellehddd.com/" title="website development" rel="dofollow">website development</a> from scratch and was impressed with her exceptional service and expertise. Christelle listened to my vision, offered creative ideas and made sure the final product exceeded my expectations. I highly recommend working with her!"</p>
     </div>
 </div>
 <div class="card">
