--- a/index.html
+++ b/index.html
@@ -377,21 +377,21 @@ body::-webkit-scrollbar {
   <div class="card">
     <img class="card-img-top" style="width:30%;" src="images/web-design-service.png" alt="responsive web UX/UI design">
     <div class="card-body">
-        <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;">responsive web UX/UI design</h4>
+        <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;"><a href="https://christellehddd.com/" title="web design" rel="dofollow">responsive web UX/UI design</a></h4>
         <p class="card-text">It's essential that your website can adjust effortlessly to various screen sizes and resolutions. My area of expertise lies in <a href="https://christellehddd.com/" title="responsive web design and development" rel="dofollow">responsive web design</a>, which guarantees that your website appears and operates smoothly on a diverse array of devices, such as smartphones, tablets, laptops, and desktops.</br>
     </div>
 </div>
 <div class="card">
     <img class="card-img-top" style="width:30%;" src="images/web-development-service.png" alt="web development">
     <div class="card-body">
-        <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;">web development</h4>
+        <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;"><a href="https://christellehddd.com/" title="web development" rel="dofollow">web development</a></h4>
         <p class="card-text">Creating a website is not only about the appearance. My approach involves following the most up-to-date web standards and implementing the most effective SEO techniques to construct websites that are mobile-friendly, exceptionally fast, and optimized for search engines. This ensures that your desired audience can effortlessly find and navigate your website online.</p>
     </div>
 </div>
 <div class="card">
     <img class="card-img-top" style="width:30%;" src="images/web-maintenance-service.png" alt="web maintenance and support">
     <div class="card-body">
-      <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;">web maintenance</h4>
+      <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;"><a href="https://christellehddd.com/" title="web maintenance" rel="dofollow">web maintenance</a></h4>
       <p class="card-text">To keep websites functional, my web maintenance and support service ensures that your website remains secure, up to date, and operating smoothly, allowing you to focus on your core business activities while I handle all aspects of website maintenance and provide ongoing support. 
    </p>
 </div>
@@ -473,7 +473,7 @@ Let's get started on the project! I will ensure you are consistently updated thr
     <img class="card-img-top" style="width:10%;" src="images/testi.png" alt="testimonial quote">
     <div class="card-body">
         <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;">Maya A.</h4>
-        <p class="card-text">"I recently worked with Christelle on a <a href="https://christellehddd.com/" title="website development" rel="dofollow">website development</a> from scratch and was impressed with her exceptional service and expertise. Christelle listened to my vision, offered creative ideas and made sure the final product exceeded my expectations. I highly recommend working with her!"</p>
+        <p class="card-text">"I recently worked with Christelle on a website development from scratch and was impressed with her exceptional service and expertise. Christelle listened to my vision, offered creative ideas and made sure the final product exceeded my expectations. I highly recommend working with her!"</p>
     </div>
 </div>
 <div class="card">
